@@ -5,6 +5,7 @@ $Id$
 June 24, 2009
 -------------
 NOISSUE by merlinofchaos: Made blue lagoon pager smaller and italic.
+#500978 by Michelle: Got topic list icons working. The reports of their functionality have been greatly exaggerated.
 
 June 23, 2009
 -------------
